# Hiring-Process-Automation

./: README.md  poem.txt  pyproject.toml
src/chat_workflow/: main copy.py  main.py
src/chat_workflow/crews/chat_assistant_crew/: chat_assistant_crew.py
src/chat_workflow/crews/chat_assistant_crew/config/: agents.yaml  tasks.yaml
src/chat_workflow/crews/database_response_crew/: database_response_crew.py
src/chat_workflow/crews/database_response_crew/config/: agents.yaml  tasks.yaml
src/chat_workflow/crews/generic_response_crew/: generic_response_crew.py
src/chat_workflow/crews/generic_response_crew/config/: agents.yaml  tasks.yaml
src/chat_workflow/tools/: connectDB.py  oracleDBConnector.py
